Fixed navbar spacing

--- a/styles/styles-022.css
+++ b/styles/styles-022.css
@@ -201,9 +201,9 @@ button:focus {
 	margin-right: 16px;
 }
 .primary-button.btn-rounded {
-	padding: 6px 12px;
+	padding: 6px 6px;
 	border-radius: 30px;
-	width: 225px;
+	width: 215px;
 }
 @media (max-width: 576px) {
 	.primary-button-wrapper {
